--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.10",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/tailwind": "^5.1.1",
+    "astro": "^4.15.10",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.13"
   }
 }
